--- a/templates/basic.html
+++ b/templates/basic.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/backend.css'%}">
     <script type='text/javascript' src="{% static 'js/jquery.min.js'%}"></script>
+    <script type='text/javascript' src="{% static 'js/echarts.common.min.js'%}"></script>
 </head>
 <body>
 {% include 'header.html'%}
